tests/ui/parser/break_continue_outside_loop.stderr
error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |     break;
   |     ^^^^^^
   |

error: `continue` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |     continue;
   |     ^^^^^^^^^
   |

error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         break;
   |         ^^^^^^
   |

error: `continue` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         continue;
   |         ^^^^^^^^^
   |

error: no visibility specified
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |     function f() {
   |              ^
   |
   = help: do you intend to add public?

error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         break;
   |         ^^^^^^
   |

error: `continue` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         continue;
   |         ^^^^^^^^^
   |

error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |             break;
   |             ^^^^^^
   |

error: `continue` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |             continue;
   |             ^^^^^^^^^
   |

error: aborting due to 9 previous errors

